--- a/04_Blog-App/src/views/partials/head.ejs
+++ b/04_Blog-App/src/views/partials/head.ejs
@@ -1,5 +1,11 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<!-- favicon -->
+<link
+  rel="shortcut icon"
+  href="../../../public/favicon.png"
+  type="image/x-icon"
+/>
 <!-- Bootstrap css cdn -->
 <link
   href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
