feat: Add signup page and update favicon path
- Created signup.ejs view for user registration
- Corrected favicon path in head.ejs partial

--- a/04_Blog-App/src/views/partials/head.ejs
+++ b/04_Blog-App/src/views/partials/head.ejs
@@ -3,7 +3,7 @@
 <!-- favicon -->
 <link
   rel="shortcut icon"
-  href="../../../public/favicon.png"
+  href="../../../public/img/favicon.png"
   type="image/x-icon"
 />
 <!-- Bootstrap css cdn -->
