--- a/04_Blog-App/src/views/signin.ejs
+++ b/04_Blog-App/src/views/signin.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <%- include('./partials/head') %>
-    <title>Signup | Blogify</title>
+    <title>Signin | Blogify</title>
   </head>
   <body class="bg-light">
     <%- include('./partials/navbar') %>
@@ -13,31 +13,16 @@
           <div class="card shadow-sm border-0 px-4 py-5">
             <div class="card-body">
               <div class="text-center mb-4">
-                <h2 class="fw-bold">Create Account</h2>
-                <p class="text-muted">Join the Blogify community today.</p>
+                <h2 class="fw-bold">Sign in Account</h2>
+                <p class="text-muted">Back to the Blogify community today.</p>
               </div>
 
               <form
                 class="needs-validation"
-                action="/users/signup"
+                action="/users/signin"
                 method="post"
                 novalidate
               >
-                <div class="mb-3">
-                  <label for="fullname" class="form-label fw-semibold"
-                    >Full Name</label
-                  >
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="fullname"
-                    placeholder="Enter your name"
-                    required
-                    name="fullname"
-                  />
-                  <div class="valid-feedback">Looks good!</div>
-                </div>
-
                 <div class="mb-3">
                   <label for="email" class="form-label fw-semibold"
                     >Email</label
@@ -51,25 +36,6 @@
                     name="email"
                   />
                   <div class="valid-feedback">Looks good!</div>
-                </div>
-
-                <div class="mb-3">
-                  <label for="username" class="form-label fw-semibold"
-                    >Username</label
-                  >
-                  <div class="input-group has-validation">
-                    <span class="input-group-text" id="inputGroupPrepend"
-                      >@</span
-                    >
-                    <input
-                      type="text"
-                      class="form-control"
-                      id="username"
-                      placeholder="username"
-                      required
-                      name="username"
-                    />
-                  </div>
                 </div>
 
                 <div class="mb-3">
@@ -92,14 +58,14 @@
 
                 <div class="d-grid">
                   <button class="btn btn-primary btn-lg" type="submit">
-                    Sign up
+                    Sign in
                   </button>
                 </div>
 
                 <div class="text-center mt-3">
                   <p class="small mb-0">
-                    Already have an account?
-                    <a href="/users/signin" class="text-decoration-none">Sign in</a>
+                    Don't' have an account?
+                    <a href="/users/signup" class="text-decoration-none">Sign up</a>
                   </p>
                 </div>
               </form>
