feat(auth): enhance user login and token generation
- Rename static method to better reflect functionality
- Integrate token creation into password matching
- Add error display in navbar partial

--- a/04_Blog-App/src/views/partials/navbar.ejs
+++ b/04_Blog-App/src/views/partials/navbar.ejs
@@ -41,3 +41,11 @@
     </div>
   </div>
 </nav>
+
+<% if (locals.error) { %>
+  <div class="container mt-4">
+    <div class="alert alert-danger d-flex align-items-center " role="alert">
+        <%= locals.error %>
+    </div>
+  </div>
+<% } %>
