--- a/04_Blog-App/src/views/partials/navbar.ejs
+++ b/04_Blog-App/src/views/partials/navbar.ejs
@@ -18,11 +18,12 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="./">Home</a>
+          <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="./">Add blog</a>
-        </li>
+        <% if (locals.user) { %>
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="./">Add blog</a>
+          </li>
         <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle"
@@ -31,12 +32,20 @@
             data-bs-toggle="dropdown"
             aria-expanded="false"
           >
-            Username
+          <%= user.username %>
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Logout</a></li>
+            <li><a class="dropdown-item" href="/users/signou">Signout</a></li>
           </ul>
         </li>
+        <% } else{%>
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="/users/signin">Sign in</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="/users/signup">Create account</a>
+          </li>
+          <% }%>
       </ul>
     </div>
   </div>
