fix: Correct typo in signout link
- Changed "signou" to "signout" in navbar.ejs

--- a/04_Blog-App/src/views/partials/navbar.ejs
+++ b/04_Blog-App/src/views/partials/navbar.ejs
@@ -35,7 +35,7 @@
           <%= user.username %>
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="/users/signou">Signout</a></li>
+            <li><a class="dropdown-item" href="/users/signout">Signout</a></li>
           </ul>
         </li>
         <% } else{%>
