--- a/04_Blog-App/src/views/partials/navbar.ejs
+++ b/04_Blog-App/src/views/partials/navbar.ejs
@@ -1,6 +1,5 @@
 <nav
   class="navbar navbar-expand-lg bg-body-tertiary bg-dark"
-  data-bs-theme="dark"
 >
   <div class="container-fluid">
     <a class="navbar-brand" href="./">Blogify</a>
@@ -22,7 +21,7 @@
         </li>
         <% if (locals.user) { %>
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="./">Add blog</a>
+            <a class="nav-link" aria-current="page" href="/blog/add-new">Add blog</a>
           </li>
         <li class="nav-item dropdown">
           <a
