--- a/04_Blog-App/src/views/home.ejs
+++ b/04_Blog-App/src/views/home.ejs
@@ -56,7 +56,7 @@
                       <div class="d-flex align-items-center justify-content-between mt-3 pt-3 border-top" style="border-color: var(--bs-border-color) !important;">
                         <div class="d-flex align-items-center gap-2">
                           <span class="avatar-ring">
-                            <img src="<%= blog.createdBy?.profileImage || blog.coverImage %>" alt="author" />
+                            <img src="<%= blog.createdBy?.avatar %>" alt="author" />
                           </span>
                           <span class="text-secondary small fw-medium">
                             <%= blog.createdBy?.username || 'Author' %>
